build: prepare prject for release